# CatenaD4J

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  PACKAGING_SUMMARY.md  PYPI_PUBLISHING.md  QUICKSTART_PYPI.md  README.md  build.py  c4j  catena4j  pyproject.toml  setup.py  setup_unix_user.py
.github/agents/: docs.agent.md
.github/workflows/: publish-to-pypi.yml
catena4j/: _bootstrap.py  argparse.py  backend.py  bootstrap.py  build.py  c4jutil.py  catena4j  checkout.py  config.py  d4jutil.py  default_loader.py  dispatcher.py  env.py  exceptions.py  ids.py  init_internal.py  init_system.py  loaders.py  reset.py  user_setup.py  util.py
catena4j/ProjectManager/: __init__.py
catena4j/cli/: manager.py  parser.py
catena4j/commands/: __init__.py  checkout.py  compile.py  export.py  test.py  xids.py
catena4j/loaders/: Chart.py  Cli.py  Closure.py  Codec.py  Collections.py  Compress.py  Csv.py  Gson.py  JacksonCore.py  JacksonDatabind.py  JacksonXml.py  Jsoup.py  JxPath.py  Lang.py  Math.py  Mockito.py  Time.py  __init__.py  loader.py  post_checkout_util.py  project_loader.py
catena4j/v1/: backend.py  checkout.py  default_loader.py  entries.py  ids.py  init_internal.py  init_system.py  loaders.py  reset.py  util.py
docs/: API.md  ARCHITECTURE.md  INDEX.md  JAVA_API.md  README.md  USAGE.md  cli.md  commands.md  loaders.md  utilities.md
docs/cli/: README.md
docs/commands/: README.md
docs/java/: ant-tasks.md  defects4j.md  junit-agent.md  test-runners.md
docs/loaders/: README.md
docs/python/: commands.md  loaders.md  utilities.md
docs/toolkit/: README.md  ant-tasks.md  defects4j-integration.md  overview.md  test-utilities.md
internal/: backend.py  checkout.py  config.py  default_loader.py  entries.py  export.py  init_user.py  reset.py  util.py
resources/: defects4j.libraries.xml  defects4j.properties
scripts/: Dockerfile.experiments  README.md  build.sh  install_requirements.sh
toolkit/: .gitignore  README.md  build.gradle  compile.sh  export
(+5407 files in other folders)
